# geo-findr

./: .envrc  .gitignore  .tool-versions  README.md  flake.nix  notice.json  package.json  paperspace.json  pnpm-lock.yaml  pyproject.toml  remote-tasks.json  requirements.txt
.husky/: pre-commit
configs/: aa_baseline.yaml  aa_latlon.yaml  aa_latlon1.yaml  aa_latlon2.yaml  aa_latlon3.yaml  aa_latlon4.yaml  ab_aug.yaml  ac_xyz.yaml  ad_large_head.yaml  ba_diffusion.yaml  bb_large_image.yaml  bc_large_head.yaml  bd_cospos.yaml  be_fastdata.yaml  be_panocuda.yaml  bf_accgrad.yaml  bg_heading.yaml  bh_pano1024.yaml  bi_four.yaml  ca_baseline.yaml  cb_coslr.yaml  cc_finetune.yaml  cd_justvit.yaml  ce_sigmoid.yaml  cf_continuous.yaml
engine/: train.py
engine/attempts/: aa_baseline.py  aa_latlon.py  ab_xyz.py  ac_xyz_large_head.py  ba_diffusion.py  bb_large_head.py  bc_cospos.py  bd_fastdata.py  bd_panocuda.py  ca_baseline.py  cb_finetune.py  cc_justvit.py  cd_sigmoid.py  ce_continuous.py  latlon1.py  latlon2.py  latlon3.py  latlon4.py
engine/lib/: ddpm.py  diffusion.py  geo.py  modules.py  projection.py  utils.py
notes/: aa_vit.py  ab_rearrange.py  ac_infer_example.py  ad_gradio.py  ad_visualize.py
paperspace/: bashrc.sh  boot.sh  build.sh  setup.ipynb  startup.sh
paperspace/basic/: Dockerfile
scrape/: package.json  start-tor.sh  tsconfig.json
scrape/src/: check-broken.ts  client.ts  coverage-visualize.ts  coverage.ts  download.ts  generate.ts  generate_1024_jpeg.ts  main.ts  streetview.ts  utils.ts  visualize-dataset.ts  (+1 more)
tools/: format.py  pdm_export.py
(+10 files in other folders)
